@@ -733,7 +733,7 @@ lucas_sequence(IN char* strn, IN IV P, IN IV Q, IN char* strk)
     VALIDATE_AND_SET("lucas_sequence", n, strn);
     VALIDATE_AND_SET("lucas_sequence", k, strk);
     mpz_init(U);  mpz_init(V);  mpz_init(Qk);  mpz_init(t);
-    _GMP_lucas_seq(U, V, n, P, Q, k, Qk, t);
+    lucas_seq(U, V, n, P, Q, k, Qk, t);
     XPUSH_MPZ(U);
     XPUSH_MPZ(V);
     XPUSH_MPZ(Qk);
